app/assets/stylesheets/ui.css
/* Tabs */
.tabbable {
	margin: 0 0 10px; }
.tabbable[class*="span"] {
	float: right;
	background: #EDF2E2;
	margin-left: 0;
	padding: 0 30px 30px; }
.tabbable-condensed {
	width: 670px; }
/* Tab Navigation */
ul.nav-tabs {
	border-color: #B6B6B7;
	height: 30px;
	margin: 10px 0 0; }
ul.nav-tabs li {
	list-style: none;
	height: 31px; }
ul.nav-tabs li a {
	display: block;
	border-color: #B6B6B7;
	border-bottom: none;
	background: #FFFFFF;
	color: #4C4C4E;
	font-size: 13px;
	font-weight: bold;
	line-height: 31px;
	height: 29px;
	padding: 0 14px; }
.nav-tabs > .active >  a, .nav-tabs > .active > a:hover, .nav-tabs > .active > a:focus {
	border-color: #B6B6B7;
	border-bottom: none;
	color: #516935;
	height: 30px; }
ul.nav-tabs li a:hover, .tabs ul.nav-tabs li a:focus {
	height: 29px; }
ul.nav-tabs li.active > a:hover, .tabs ul.nav-tabs li.active a:focus {
	border: 1px solid #C9C9CB;
	border-bottom: none;
	height: 30px; }
/* Tab Content */
.tab-content {
	border: 1px solid #B6B6B7;
	border-top: none;
	background: #FFFFFF;
	overflow: visible; }
.tab-pane {
	padding: 10px; }
.tabbable[class*="span"] .tab-pane {
	padding-bottom: 10px; }
.tab-pane.table {
	border: none;
	margin: 0;
	padding: 0; }
.tab-pane.table .table {
	border: none; }
.tab-pane hr, form hr {
	border-top: 2px dotted #C9C9CB;
	margin-top: 0;
	margin-bottom: 15px; }
.tab-pane form {
	margin-bottom: 0; }
.tab-pane input.input-xxlarge {
	width: 400px; }
.tab-pane textarea.input-xxlarge {
	width: 400px; }
.tab-pane select.input-xxlarge {
	width: 415px; }

/* Log In */
.login.row-fluid, .contact.row-fluid {
	margin: 20px 35px; }
.login.terms {
	margin: 20px 0; }
.login p {
	font-size: 1.167em; }
.control-group.select_institution select {
	width: 330px; }
.control-group.switch_institution {
	height: 179px; }

/* DMPTool Pages */
.dmptool-page {
	margin-top: 10px; }
.dmptool-page > .span6 {
	margin: 0; }
.dmptool-page > .span6:last-child {
	border-left: 1px solid #B6B6B7;
	margin-left: 15px;
	padding-left: 15px; }
.dmptool-page > .span6 h2 {
	margin-top: 0; }
.dmptool-page p {
	font-size: 1.167; }


/* Details Pages */
.requirements-tree-view .icon.confirm, .requirements-tree-view  .icon.requirement, .requirements-tree-view  .icon.add, .requirements-tree-view  .icon.remove,
.details .icon.add-group, .details .icon.add-requirement {
	position: relative;
	top: 3px; }
.requirements-tree-view  .icon.requirement {
	margin-right: 2px;
}
.requirements-tree-view  .folder-open.icon, .requirements-tree-view  .folder-closed.icon {
	position: relative;
	top: 4px;
}

/* Tree View */
.requirements-tree-view .actions {
	margin: 0;
	position: absolute;
	top: 0;
	right: 0; }
.requirements-tree-view .current {
    font-weight: bold;
    color: #000;
}
.requirements-tree-view {
	margin-top: 0; }
.nested-requirements {
	margin-left: 20px; }
.requirements-tree-view ul {
	line-height: 1.5;
	margin: 0; }
.requirements-tree-view ul > li {
	position: relative;
	margin-bottom: 10px;
	/* padding-right: 65px; */ }
.requirements_group {
  margin-bottom: 10px; }
div.nested_requirements {
	margin-left: 20px; }
li.nested_requirements ul {
	margin-left: 20px;
}






/* Institutions Hierarchy */
.institutions {
	margin: 10px 20px 20px; }
.institution {
	margin-bottom: 8px; }
.institutions .institution span.icon {
  vertical-align: top;
}
.nested_institutions {
	margin-left: 25px; }
.institution a {
  display: inline-block;
  padding: 2px 0 0 10px;
	position: relative; }

.highlight {
  background-color: yellow;
}

.bold {
	font-weight:bold;
}

.nested_institutions_highlight {
	margin-left: 25px;
  background-color: yellow;
}

/* choose DMP template from tree view by institution */
div.template-list li {
  clear:both;
  padding: 5px 0 0 0;
}
div.template-list div.icons{
  float: left;
  clear: left;
  width: 40px;
}

div.template-list li label{
  display: block;
  float: left;
  clear: right;
}

div.template-list ul{
  margin-top: 0px;
  margin-left: 19px;
}

div.template-list .icon.requirement {
  vertical-align: text-top;
}

/* end DMP choose template */


.option_area {
  float: left;
  clear: left;
  width: 50px;
  height: 20px;
  text-align: right;
  padding: 5px 5px 5px 0px;
}
div.label_area {
  float:left;
  clear: right;
  height: 20px;
  padding: 5px 0 5px 0;
}
div.folder_label {
  font-size: 1.25em;
  font-weight: bold;
}

ul.closed_list {
  display: none;
}
ul.opened_list {
  display: block;
}





div.customization_tree{}

div.customization_tree ul{
  margin: 5px 0px 0px 25px;
}

div.customization_tree li{
  position: relative;
}

div.customization_tree li.current{
  font-weight: bold;
}

div.customization_tree li .icon {
  position: absolute;
  left: -20px;
}

div.customization_tree li .icon.larger{
  left: -23px;
}



/* Error Page */
.error-message {
	text-align: center;
	margin: 50px 0; }
.error-message p {
	font-size: 1.167em; }

/* Overview History and Comments */
a.view-plan-history, a.hide-plan-history,
a.view-reviewer-comments, a.view-owner-comments,
a.hide-reviewer-comments, a.hide-owner-comments {
	color: #86A641;
	font-weight: bold;
	padding-right: 2px;
	position: relative; }
a.view-plan-history, a.hide-plan-history {
	margin-left: 10px; }
a.view-plan-history .icon-chevron-down, a.view-reviewer-comments .icon-chevron-down, a.view-owner-comments .icon-chevron-down,
a.hide-plan-history .icon-chevron-up, a.hide-reviewer-comments .icon-chevron-up, a.hide-owner-comments .icon-chevron-up {
	position: absolute;
	left: 100%;
	top: -1px; }
.history, .comments {
	margin: -10px 0 10px; }
.history ul {
	margin: 0; }
.history li, .comments .comment {
	border-radius: 4px;
	border: 2px solid #B6B6B7;
	background: #F0F0F0;
	margin: 5px 0;
	padding: 10px;
	position: relative; }
.comments .comment {
	padding-right: 35px; }
.history .date-updated, .comment .date-created {
	position: absolute;
	top: 10px;
	right: 10px; }
.comment p {
	line-height: 1.3;
	margin: 5px 0 0; }
.comment .trash.icon {
	position: absolute;
	bottom: 10px;
	right: 10px; }

	/* Misc. */
.details[class*="span"] {
	width: 328px; }
.border-box {
	border: 1px solid #C9C9CB;
	margin-bottom: 10px;
	padding: 10px 15px; }
.tab-pane .border-box {
	margin-bottom: 10px; }

/* scrollable containers */
div.scrollable-container
{
  border: 1px solid #C9C9CB;
  height:300px;
  background:green;
  padding: 0 0 0 0;
  margin: 0 0 0 0;
}

div.scrollable-content
{
  box-sizing: border-box;
  height:100%;
  overflow:auto;
  background:#fff;
  padding: 0 10px 0 10px;
}

div.scrollable-bottom-handle {
  height : 8px;
  background : #dedede;
  bottom:0;
}

